# bb_utils

./: CHANGELOG.md  CORRECTIONS_2026-01-21.md  README.md  RESTRUCTURING_GUIDE.md  pyproject.toml
configs/: incrowdvi_superpoint_labels.yaml
docs/: IMPLEMENTATION_SUMMARY.md  NAMING_CONVENTION.md  QUICKSTART.md  RENAME_SUMMARY.md
examples/: incrowdvi_superpoint_labels_example.py
src/bb_utils/: __init__.py  incrowdvi_superpoint_labels.py
src/bb_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bb_utils/label_generation/: __init__.py  analyze_confidence.py  compare_label_methods.py  incrowdvi_superpoint_labels.py  sanity_check.py  slam_validation.py  validate_csv_to_npz.py  validate_labels.py
src/bb_utils/utils/: __init__.py  inspect_npz.py
