[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-utils"
version = "0.1.0"
description = "Small utilities for SP-SCore development"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

